# GEOSEARCH-API

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: cache.py  db.py  exceptions.py  health.py  logging_config.py  main.py  middleware.py  queries.py  routes.py  schemas.py  services.py  settings.py  websocket.py
locust/: locustfile.py
scripts/: sample_pois.csv  seed_from_csv.py  seed_synthetic.py
tests/: __init__.py  conftest.py  test_bbox.py  test_health.py  test_nearby.py  test_pois.py  test_services.py  test_websocket.py
